--- a/moses-portfolio/moses-porfolio-style.css
+++ b/moses-portfolio/moses-porfolio-style.css
@@ -144,6 +144,7 @@ background-color: white;
     flex-direction: column;
     justify-content: center;
     background-color: aquamarine; 
+    padding-left: 5px;
 }
 .card-bottom h3 {
     font-size: 18px;
@@ -237,6 +238,9 @@ footer{
 .copyright, p{
     font-weight: bolder;
 } 
+.project-para{
+    margin-left: 5px;
+}
 /* TABLET */
 @media screen and (max-width:768px) {
     .header-container{
